<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">台北倒垃圾</string>
    <string name="about">關於</string>
    <string name="recycle">垃圾分類小幫手</string>
    <string name="lbs">垃圾車班表\n找附近的垃圾車</string>
    <string name="query">垃圾車班表\n依行政區查詢</string>
    <string name="tpfix">台北市垃圾資源回收、廚餘回收限時收受點</string>
    <string name="tpfood">台北市週三、週日廚餘專用限時收受點</string>
    <string name="tpcloth">台北市\n舊衣回收箱</string>
    <string name="ntfix">新北市定點清運查詢</string>
    <string name="ntrecycle">新北市黃金資收站設置資訊</string>
    <string name="newtaipeirealtime">新北市垃圾車即時資訊</string>
    <string name="action_realtime">新北市即時資訊</string>
    <string name="action_suggest">建議與評價</string>
    <string name="action_facebook">臉書粉絲頁</string>
    <string name="action_settings">設定</string>
    <string name="exit_settings">離開</string>
    <string name="refresh_settings">更新</string>
    <string name="menu_navi">帶我去倒垃圾</string>
    <string name="search_hint">輸入關鍵字（例如：塑膠袋）</string>
    <string name="search_nodata">查無資料</string>

    <string name="network_error">無法連線，請檢查手機是否正常連網</string>
    <string name="location_error">目前無法定位座標，請檢查定位服務是否開啟</string>
    <string name="data_not_found">該時段沒有垃圾車</string>
    <string name="data_error">資料錯誤</string>

    <string name="yes_label">好</string>
    <string name="no_label">不要</string>

    <string name="ok_label">我知道了</string>
    <string name="about_subject">關於</string>
    <string name="processing">正在取得資料..</string>
    <string name="google_play_service_missing">裝置沒有安裝Google Play服務</string>

    <string name="pref_group">垃圾車班表</string>
    <string name="pref_distance">查詢範圍</string>
    <string name="pref_distance_summary">查詢距離(公里)</string>
    <string-array name="pref_distance_item">
        <item>1 公里</item>
        <item>3 公里</item>
        <item>5公里</item>
        <item>10公里</item>
    </string-array>
    <string-array name="pref_distance_code">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
    </string-array>

    <string name="pref_sorting">排序方式</string>
    <string name="pref_sorting_summary">查詢結果的預設排序方式</string>
    <string-array name="pref_sorting_item">
        <item>依垃圾車抵達時間</item>
        <item>依垃圾車距離</item>
    </string-array>
    <string-array name="pref_sorting_code">
        <item>TIME</item>
        <item>DIST</item>
    </string-array>

    <string name="pref_relatecars">顯示同班次全部時段的站點</string>
    <string name="pref_relatecars_summary">在地圖上顯示同一班次垃圾車全部時段的站點</string>

    <string name="day_spinner_prompt">星期幾</string>
    <string-array name="day_spinnner_name">
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>
    <string-array name="day_spinnner_code">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>0</item>
    </string-array>
    <string name="hour_spinner_prompt">抵達時間</string>
    <string-array name="hour_spinnner_name">
        <item>請選擇</item>
        <item>早上6點</item>
        <item>早上7點</item>
        <item>早上8點</item>
        <item>早上9點</item>
        <item>早上10點</item>
        <item>早上11點</item>
        <item>中午12點</item>
        <item>下午1點</item>
        <item>下午2點</item>
        <item>下午3點</item>
        <item>下午4點</item>
        <item>下午5點</item>
        <item>下午6點</item>
        <item>晚上7點</item>
        <item>晚上8點</item>
        <item>晚上9點</item>
        <item>晚上10點</item>
        <item>晚上11點</item>
        <item>晚上12點</item>
    </string-array>
    <string-array name="hour_spinnner_code">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="region_spinnner_name">
        <item>請選擇</item>
        <item>台北市中正區</item>
        <item>台北市大同區</item>
        <item>台北市中山區</item>
        <item>台北市松山區</item>
        <item>台北市大安區</item>
        <item>台北市萬華區</item>
        <item>台北市信義區</item>
        <item>台北市士林區</item>
        <item>台北市北投區</item>
        <item>台北市內湖區</item>
        <item>台北市南港區</item>
        <item>台北市文山區</item>
        <item>新北市八里區</item>
        <item>新北市三芝區</item>
        <item>新北市三重區</item>
        <item>新北市三峽區</item>
        <item>新北市土城區</item>
        <item>新北市中和區</item>
        <item>新北市五股區</item>
        <item>新北市平溪區</item>
        <item>新北市永和區</item>
        <item>新北市石門區</item>
        <item>新北市石碇區</item>
        <item>新北市汐止區</item>
        <item>新北市坪林區</item>
        <item>新北市林口區</item>
        <item>新北市板橋區</item>
        <item>新北市金山區</item>
        <item>新北市泰山區</item>
        <item>新北市烏來區</item>
        <item>新北市貢寮區</item>
        <item>新北市淡水區</item>
        <item>新北市深坑區</item>
        <item>新北市新店區</item>
        <item>新北市新莊區</item>
        <item>新北市瑞芳區</item>
        <item>新北市萬里區</item>
        <item>新北市樹林區</item>
        <item>新北市雙溪區</item>
        <item>新北市蘆洲區</item>
        <item>新北市鶯歌區</item>
    </string-array>

    <string name="license"><Data><![CDATA[Copyright (c) 2016 ccjeng@google.com<br/><br/>原始資料來源:
    <br/>台北市政府資料開放平台
    <br/><a href=http://data.taipei/opendata/datalist/datasetMeta?oid=c2a7d447-d4ef-4730-a3e6-b36d3f5dd995>台北市垃圾清運路線</a>
    <br/><a href=http://data.taipei/opendata/datalist/datasetMeta?oid=74643872-ee76-4727-bd02-d73b536eaad7>台北市資源回收分類方式</a>
    <br/><a href=http://data.taipei/opendata/datalist/datasetMeta?oid=1acf38f3-1509-4cb1-898a-9b1d4f31a3af>台北市垃圾資源回收、廚餘回收限時收受點</a>
    <br/><a href=http://data.taipei/opendata/datalist/datasetMeta?oid=1acf38f3-1509-4cb1-898a-9b1d4f31a3af>台北市週三、週日廚餘專用限時收受點</a>
    <br/><a href=http://data.taipei/opendata/datalist/datasetMeta?oid=33de0950-24df-463d-b199-da3fbf612ef1>台北市核准身障福利團體設置舊衣回收箱</a>


    <br/><br/>新北市政府資料開放平台
    <br/><a href=http://data.ntpc.gov.tw/od/detail?oid=EDC3AD26-8AE7-4916-A00B-BC6048D19BF8>新北市垃圾車路線</a>
    <br/><a href=http://data.ntpc.gov.tw/od/detail?oid=28AB4122-60E1-4065-98E5-ABCCB69AACA6>新北市垃圾車即時位置</a>
    <br/><a href=http://data.ntpc.gov.tw/od/detail?oid=7E97E0D4-18EA-4BCD-8567-D85DC861CA40>新北市黃金資收站設置資訊</a>
    ]]></Data></string>


    <string name="changelog_title">更新記錄</string>
    <string name="welcome_title">歡迎使用台北倒垃圾</string>
    <string name="welcome_message">請加入臉書粉絲專頁，以獲得最新訊息\n\n免責聲明：本應用之資料來源均為政府公布之開放資料，垃圾車資訊可能因為氣候或交通等外在因素，而與現實狀況略有誤差。
    </string>
</resources>
