<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            />

    </android.support.design.widget.AppBarLayout>



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/spinner_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/region_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/pref_sorting"
                android:textColor="#ff2460ff"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <Spinner
                android:id="@+id/day_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:prompt="@string/day_spinner_prompt"
                android:layout_below="@+id/region_spinner"
                android:textColor="#ff2460ff"
                android:paddingBottom="10dp"/>

            <Spinner
                android:id="@+id/hour_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:prompt="@string/hour_spinner_prompt"
                android:layout_below="@+id/day_spinner"
                android:textColor="#ff2460ff"
                android:paddingBottom="10dp"/>

        </RelativeLayout>



        <LinearLayout
            android:id="@+id/home_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/footerLayout"
            android:layout_below="@+id/spinner_layout"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_wheel"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/footerLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:orientation="horizontal">
        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
